--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 html, body { height: 100%; }
 
 body {
-  background-color: #FFF;
+  background-color: #F9F9F9;
   font: 12px 'PT Sans', Helvetica, Arial, sans-serif;
   font-size: small;
   text-align: center;
@@ -27,6 +27,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; 
   font-family: 'Arvo', Helvetica, Arial, sans-serif;
   spacing: 20px;
+  color: #707070;
 }
 
 h1 {
@@ -64,7 +65,7 @@ a:visited { color: #a0a; }
 a:focus,
 a:active,
 a:hover {
-	text-decoration: underline;
+	/*text-decoration: underline;*/
 }
 /*****************************************************************************/
 /*
@@ -92,9 +93,15 @@ ul.posts span {
 /*
 /*****************************************************************************/
 .post {
-  box-shadow: 0px 1px 4px #999;
-  -webkit-box-shadow: 0px 1px 4px #999;
-  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 4px;
+      background-color: #FFF;
+      border-style:solid;
+      border-width:1px;
+      border-color:#DDD;
+/*
+  box-shadow: 0px 0px 1px #999;
+  -webkit-box-shadow: 0px 0px 1px #999;
+  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 1px;
+*/
   padding: 20px;
 }
 
@@ -113,6 +120,11 @@ ul.posts span {
 }
 
 .site .header a {
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.site .post h2 a {
   font-weight: bold;
   text-decoration: none;
 }
@@ -179,7 +191,7 @@ ul.posts span {
 /* standard */
 .post pre {
   border: 1px solid #ddd;
-  background-color: #eee;
+  background-color: #ededed;
   padding: 0 .4em;
 }
 
