--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
               {% for cat in site.categories %}
               <a class="extra" href="/{{ cat[0] | lower }}.html">{{ cat[0] }}</a>
               {% endfor %}
-              <a class="extra" href="/publications.html">posts</a>
+              <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/posts.html">posts</a>
             </div>
 
