--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
+        <!-- bootstrp CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
         <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|PT+Sans|Arvo' rel='stylesheet' type='text/css'>
 
