--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
-        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> -->
+        <script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>    
         </script>
     </head>
     <body>
