--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,15 @@
         <link rel="stylesheet" href="/css/main.css">
 
         <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> -->
+        <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
         <script type="text/x-mathjax-config">
             MathJax.Hub.Config({
-            TeX: { equationNumbers: { autoNumber: "AMS" } }
+                tex2jax: {
+                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                    processEscapes: true
+                }
             });
-         </script>
+        </script>
         <script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>    
         </script>
     </head>
